--------------------------------------------
13-Nov-2010,  version 1.6-18
Added drop=FALSE to "[" methods, to return a Raster*. 

--------------------------------------------
10-Nov-2010,  version 1.6-17
[[ method to extract layers from multi-layer objecs
Writing cdf files now uses the CF standard 'degrees_east' and 'degrees_north' as variable names in lon/lat data (suggested by Kevin Ummel)

--------------------------------------------
8-Nov-2010,  version 1.6-16
fixed bug when using se.fit=TRUE in predict (it did not respond to it). Reported by Eliane Meier. 
Also changed the above that when se.fit=T, both the prediction AND the s.e. are returned (as a RasterBrick)
changed NAvalue argument in writeRaster to NAflag to avoid confusion with NAvalue function
fixed backwards compatability by replacing packageVersion('rgdal') to packageDescription('rgdal')$Version

--------------------------------------------
5-Nov-2010,  version 1.6-13
'unique' now also works for multi-layer objects
Using new features in GDAL 0.6-29: set statistics and capture raster attributes 

--------------------------------------------
4-Nov-2010,  version 1.6-12
Replacing pointsToRater, linesToRaster and polygonsToRaster with single generic function 'rasterize'

--------------------------------------------
3-Nov-2010,  version 1.6-11
Introduces support for netcdf files with 4 dimensions (lon, lat, level, time), because of a problem reported by Kevin Ummel

--------------------------------------------
30-Oct-2010,  version 1.6-10
Improved [ and [<- methods. Removed [[ methods

--------------------------------------------
29-Oct-2010,  version 1.6-9
Introduced sub-setting of Raster* objects with Spatial* objects

--------------------------------------------
27-Oct-2010,  version 1.6-7
Additional options to linesToRaster (to match polygonsToRaster)
as.matrix implemented for Raster* objects (suggested by Michael Sumner)

--------------------------------------------
26-Oct-2010,  version 1.6-6